<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_16sdp"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tvTitleFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text.Bold.16"
        android:text="@string/filter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_above="@id/vButtonsContainer"
        android:layout_below="@id/tvTitleFilters"
        tools:listitem="@layout/item_range_filter"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <LinearLayout
        android:id="@+id/vButtonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/bApply"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:layout_marginBottom="@dimen/_4sdp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</RelativeLayout>